# CIC

./: .gitignore  Makefile  README.md  pyproject.toml
hdl/: cic_d.sv  cic_functions.vh  cic_i.sv  comb.sv  downsampler.sv  downsampler_variable.sv  integrator.sv
tests/: spectral_analysis.py  test_cic_d.py
tools/: calculate_register_pruning.py  register_pruning_analysis.py  register_pruning_parameter_calculator.py
